Add Subdivision Decision Components
* Add Subdivision decision component with new lot-input-form component
* Update Subdivision proposal component with new labels / fields
* Add new DB field for storing decision component approved lots
* Move inline component to their own folder to better organize shared

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/decision-component.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/decision-component.component.html
@@ -96,4 +96,10 @@
       [codes]="codes"
     ></app-naru-input>
   </div>
+  <div class="row-no-flex">
+    <app-subd-input
+      *ngIf="data.applicationDecisionComponentTypeCode === COMPONENT_TYPE.SUBD"
+      [form]="form"
+    ></app-subd-input>
+  </div>
 </form>
