--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
@@ -255,6 +255,12 @@
                   *ngIf="component.applicationDecisionComponentTypeCode === COMPONENT_TYPE.NARU"
                   [component]="component"
                 ></app-naru>
+
+                <app-subd
+                  class="grid-3"
+                  *ngIf="component.applicationDecisionComponentTypeCode === COMPONENT_TYPE.SUBD"
+                  [component]="component"
+                ></app-subd>
               </div>
             </div>
           </div>
