--- a/alcs-frontend/src/app/shared/inline-editors/inline-boolean/inline-boolean.component.scss
+++ b/alcs-frontend/src/app/shared/inline-editors/inline-boolean/inline-boolean.component.scss
@@ -1,11 +1,12 @@
-@use '../../../styles/colors';
+@use '../../../../styles/colors';
 
-.inline-number-wrapper {
+.inline-date-picker-wrapper {
   padding-top: 4px;
 }
 
 .editing {
   display: inline-block;
+  width: 100%;
 }
 
 .editing.hidden {
@@ -33,10 +34,6 @@
   }
 }
 
-.add {
-  cursor: pointer;
-}
-
 .save {
   color: colors.$primary-color;
 }
@@ -54,4 +51,8 @@
   .mat-mdc-icon-button.mat-mdc-button-base {
     padding: 0 !important;
   }
+}
+
+.button-group {
+  width: 100%;
 }
