--- a/alcs-frontend/src/app/features/application/proposal/subd/sub.dcomponent.scss
+++ b/alcs-frontend/src/app/features/application/proposal/subd/sub.dcomponent.scss
@@ -1,6 +1,6 @@
 .parcel-table {
   display: grid;
-  grid-template-columns: max-content max-content max-content;
+  grid-template-columns: max-content max-content max-content max-content;
   grid-column-gap: 36px;
   grid-row-gap: 12px;
 }
