LFNG As applicant bug fixes
* Check if submission is to own users government to control copying
* Add error to step 8 when missing Department
* Fix logic in primary contact to show errors at the right time

--- a/portal-frontend/src/app/features/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/application-details/application-details.component.html
@@ -48,7 +48,10 @@
     </div>
     <div class="grid-double">
       {{ primaryContact?.organizationName }}
-      <app-no-data *ngIf="!primaryContact?.organizationName"></app-no-data>
+      <app-no-data
+        [showRequired]="showErrors && primaryContact?.type?.code === APPLICATION_OWNER.GOVERNMENT"
+        *ngIf="!primaryContact?.organizationName"
+      ></app-no-data>
     </div>
     <div class="subheading2 grid-1">Phone</div>
     <div class="grid-double">
