nfu subtype with inline ng select

--- a/alcs-frontend/src/app/features/application/proposal/nfu/nfu.component.html
+++ b/alcs-frontend/src/app/features/application/proposal/nfu/nfu.component.html
@@ -6,13 +6,13 @@
     (save)="updateApplicationValue('nfuUseType', $event)"
   ></app-inline-dropdown>
 </div>
-<div>
+<div class="nfu-subtype-wrapper">
   <div class="subheading2">Non-Farm Use Sub-Type</div>
-  <app-inline-dropdown
+  <app-inline-ng-select
     [value]="application?.nfuUseSubType"
     [options]="nfuSubTypes"
     (save)="updateApplicationValue('nfuUseSubType', $event)"
-  ></app-inline-dropdown>
+  ></app-inline-ng-select>
 </div>
 <div>
   <div class="subheading2">Use End Date</div>
