Select and save inclExclApplicantType with inline selector

--- a/alcs-frontend/src/app/features/application/proposal/excl/excl.component.html
+++ b/alcs-frontend/src/app/features/application/proposal/excl/excl.component.html
@@ -1,1 +1,7 @@
-<p>excl works!</p>
+<div>
+  <div class="subheading2">Applicant Type</div>
+  <app-inline-applicant-type
+    [value]="applicantType"
+    (save)="updateApplicationValue('inclExclApplicantType', $event)"
+  ></app-inline-applicant-type>
+</div>
