--- a/alcs-frontend/src/app/features/application/decision/conditions/condition/condition.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/conditions/condition/condition.component.scss
@@ -1,3 +1,14 @@
 .component-labels {
   white-space: pre-wrap;
 }
+
+.parcel-table {
+  display: grid;
+  grid-template-columns: max-content max-content max-content max-content;
+  grid-column-gap: 36px;
+  grid-row-gap: 12px;
+}
+
+.container {
+  margin: 32px 0;
+}
