--- a/alcs-frontend/src/app/features/application/decision/conditions/conditions.component.html
+++ b/alcs-frontend/src/app/features/application/decision/conditions/conditions.component.html
@@ -62,6 +62,7 @@
           [ngClass]="{ 'condition-container': true, 'even-condition': j % 2 }"
           [condition]="condition"
           [isDraftDecision]="decision.isDraft"
+          [fileNumber]="fileNumber"
         ></app-condition>
       </div>
     </div>
