Incl/Excl Features
* Add Incl/Excl to Submission Validator
* Add Incl to Portal and ALCS App Details
* Update Incl form with interface to remove ts-ignore
* Change it so Incl does not have the prescribed body select
*

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.html
@@ -178,6 +178,12 @@
     [files]="files"
   >
   </app-excl-details>
+  <app-incl-details
+    *ngIf="submission && applicationType === 'INCL'"
+    [applicationSubmission]="submission"
+    [files]="files"
+  >
+  </app-incl-details>
   <div class="review-table edit-section">
     <div class="full-width center">
       <button *ngIf="showEdit" [disabled]="disableEdit" (click)="onEdit(5)" mat-flat-button color="accent">
