--- a/alcs-frontend/src/app/features/application/proposal/proposal.component.html
+++ b/alcs-frontend/src/app/features/application/proposal/proposal.component.html
@@ -38,6 +38,7 @@
     </div>
     <app-proposal-tur *ngIf="application && application.type.code === 'TURP'"></app-proposal-tur>
     <app-proposal-excl *ngIf="application && application.type.code === 'EXCL'"></app-proposal-excl>
+    <app-proposal-incl *ngIf="application && application.type.code === 'INCL'"></app-proposal-incl>
   </div>
   <app-proposal-nfu *ngIf="application && application.type.code === 'NFUP'"></app-proposal-nfu>
   <app-proposal-subd *ngIf="application && application.type.code === 'SUBD'"></app-proposal-subd>
