--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.scss
@@ -160,4 +160,10 @@
       margin-bottom: 0px !important;
     }
   }
+
+  .toggle-label {
+    color: colors.$grey-dark;
+    display: block;
+    margin-bottom: 3px;
+  }
 }
