Allow changing prescribed body with change app type dialog

--- a/portal-frontend/src/app/features/edit-submission/change-application-type-dialog/change-application-type-dialog.component.html
+++ b/portal-frontend/src/app/features/edit-submission/change-application-type-dialog/change-application-type-dialog.component.html
@@ -71,7 +71,7 @@
     <button
       mat-flat-button
       color="primary"
-      [disabled]="!selectedAppType || selectedAppType.code === submissionTypeCode"
+      [disabled]="!selectedAppType"
       (click)="next()"
     >
       update
