--- a/portal-frontend/src/app/features/edit-submission/proposal/excl-proposal/excl-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/excl-proposal/excl-proposal.component.html
@@ -137,7 +137,9 @@
     and correct before downloading the PDF of the application (Step 8 of this application form will flag outstanding
     fields).
   </p>
-  <app-info-banner> Please refer to Exclusion page on the ALC website for more information. </app-info-banner>
+  <app-info-banner>
+    Please refer to <a>FIXME: Exclusion</a> page on the ALC website for more information.
+  </app-info-banner>
   <button mat-flat-button color="accent">Download PDF</button>
   <app-warning-banner>
     You will not be able to complete the remaining portion of the application until the notification and public hearing
